[gd_scene load_steps=26 format=3 uid="uid://b51ni1imm3j05"]

[ext_resource type="Texture2D" uid="uid://d4dc8iewpqeq8" path="res://Assets/Snail/Shell Top Hit (38x24).png" id="1_2hyhe"]
[ext_resource type="Texture2D" uid="uid://b365qwt06cjhq" path="res://Assets/Snail/Shell Idle (38x24).png" id="2_vvlew"]
[ext_resource type="Texture2D" uid="uid://bte6gg5blnpn0" path="res://Assets/Snail/Shell Wall Hit (38x24).png" id="3_6aabd"]
[ext_resource type="Script" uid="uid://c1lyol8x60vj1" path="res://Scripts/shell.gd" id="4_vvlew"]
[ext_resource type="PackedScene" uid="uid://d37vkk72w43ie" path="res://Scenes/hitbox.tscn" id="5_6aabd"]
[ext_resource type="PackedScene" uid="uid://bko0phuj3etyn" path="res://Scenes/hurtbox.tscn" id="6_4eusm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4060h"]
atlas = ExtResource("1_2hyhe")
region = Rect2(0, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxtes"]
atlas = ExtResource("1_2hyhe")
region = Rect2(38, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_aebeb"]
atlas = ExtResource("1_2hyhe")
region = Rect2(76, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ajfc"]
atlas = ExtResource("1_2hyhe")
region = Rect2(114, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5t7i"]
atlas = ExtResource("1_2hyhe")
region = Rect2(152, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xuj2"]
atlas = ExtResource("2_vvlew")
region = Rect2(0, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjkrq"]
atlas = ExtResource("2_vvlew")
region = Rect2(38, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnfci"]
atlas = ExtResource("2_vvlew")
region = Rect2(76, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_43ojb"]
atlas = ExtResource("2_vvlew")
region = Rect2(114, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_md2g8"]
atlas = ExtResource("2_vvlew")
region = Rect2(152, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_00aqp"]
atlas = ExtResource("2_vvlew")
region = Rect2(190, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbsw1"]
atlas = ExtResource("3_6aabd")
region = Rect2(0, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_q84qk"]
atlas = ExtResource("3_6aabd")
region = Rect2(38, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gysws"]
atlas = ExtResource("3_6aabd")
region = Rect2(76, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n22jt"]
atlas = ExtResource("3_6aabd")
region = Rect2(114, 0, 38, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_4eusm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4060h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxtes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aebeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ajfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5t7i")
}],
"loop": false,
"name": &"hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xuj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjkrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnfci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43ojb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md2g8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00aqp")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbsw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q84qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gysws")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_n22jt")
}],
"loop": false,
"name": &"wall_hit",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fp5ya"]
size = Vector2(24, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4eusm"]
size = Vector2(14, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5qwdc"]
size = Vector2(20, 18)

[node name="Shell" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_4eusm")
animation = &"idle"
autoplay = "idle"
script = ExtResource("4_vvlew")

[node name="LeftCast" type="RayCast2D" parent="."]
target_position = Vector2(-12, 0)

[node name="RightCast" type="RayCast2D" parent="."]
rotation = 3.14159
target_position = Vector2(-12, 0)

[node name="GroundCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 12)

[node name="Hitbox" parent="." instance=ExtResource("5_6aabd")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(2, 3.5)
shape = SubResource("RectangleShape2D_fp5ya")
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource("6_4eusm")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(3, -8.5)
shape = SubResource("RectangleShape2D_4eusm")
disabled = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2, 3)
shape = SubResource("RectangleShape2D_5qwdc")

[node name="ImmunityTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="timeout" from="ImmunityTimer" to="." method="_on_immunity_timer_timeout"]
